# ontology-kit

./: .env.example  .gitignore  AGENTS.md  AGENT_NAVIGATION_GUIDE.md  AI_DEVELOPMENT_GUIDE.md  ARCHITECTURE_COMPLEXITY_ASSESSMENT.md  ARCHITECTURE_DECISION.md  ARCHITECTURE_PLAN.md  ARCHITECTURE_SUMMARY.md  BUSINESS_ONTOLOGY_PLAN.md  CLI_GUIDE.md  CLI_IMPLEMENTATION_SUMMARY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONSOLIDATION_ACTION_PLAN.md  CONTRIBUTING.md  DOCUMENTATION_PLAN.md  GROK_INTEGRATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_MAP.md  LEVERAGE_TOOL_INTEGRATION.md  LICENSE  ML_TOOL_ONTOLOGY.md  MONEY_MAKING_AGENTS_GUIDE.md  Makefile  OBSERVABILITY_IMPROVEMENTS.md  OPENAI_SDK_INTEGRATION_SUMMARY.md  QUALITY_CHECKLIST.md  QUICKSTART.md  QUICKSTART.sh  QUICK_START_UNIFIED_SDK.md  README.md  REPOSITORY_BREAKDOWN.md  REVIEW_SUMMARY.md  SEMANTIC_GRAPH_IMPLEMENTATION.md  SETUP_AND_VERIFY.md  START_HERE.md  TOOLS_AND_AGENTS_SUMMARY.md  V0.1_COMPLETE.md  VERCEL_DEPLOYMENT.md  (+9 more)
.github/workflows/: lint.yml  test.yml
api/: README.md  health.py  index.py  ontology.py  requirements.txt
assets/ontologies/: betting.ttl  business.ttl  core.ttl  ml_tools.ttl  tools.ttl  trading.ttl
docs/: ADK_INTEGRATION_RECOMMENDATIONS.md  ADK_QUICK_REFERENCE.md  AGENT_FACTORY_GUIDE.md  GROK_INTEGRATION_GUIDE.md  HYPERDIM_VIZ_TOOL.md  INDEX.md  LEVERAGE_ANALYSIS_TOOL.md  MONEY_MAKING_AGENTS.md  README_SEMANTIC_TOOLS.md  SDK_INTEGRATION_QUICK_REFERENCE.md  SEMANTIC_LEVERAGE_GUIDE.md  TOOL_ORGANIZATION_GUIDE.md  UNIFIED_SDK_CHANGELOG.md  UNIFIED_SDK_INTEGRATION_STRATEGY.md  index.md  openai_agents_sdk.md
docs/guides/: AGENTS.md  ENGINEERING_OUTLINE.md  ORCHESTRATION_INTEGRATION.md
docs/history/: ADVANCED_FEATURES_SUMMARY.md  EXECUTION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  OPENAI_SDK_INTEGRATION_SUMMARY.md  SDK_INTEGRATION_COMPLETE.md
docs/models/gemini/: instructions.md
docs/technical/: AGENTS_AND_TOOLS.md  ARCHITECTURE_OVERVIEW.md  DEVELOPMENT_GUIDE.md  ONTOLOGY_LAYER.md  USAGE_AND_EXAMPLES.md
docs/tools/: HYPERDIM_VIZ_TOOL.md  LEVERAGE_ANALYSIS_TOOL.md  README_SEMANTIC_TOOLS.md  SEMANTIC_GRAPH_IMPLEMENTATION.md  SEMANTIC_LEVERAGE_GUIDE.md
examples/: 01_embed_and_search.py  02_ontology_query.py  03_business_ontology.py  03_ontology_agents.py  04_comprehensive_agents.py  04_orchestrated_agents.py  04_sdk_orchestrator.py  05_dynamic_ontology.py  05_hybrid_orchestration.py  06_hyperdim_viz_tool.py  07_leverage_analysis.py  08_ontology_ml_breakdown_demo.py  UNIFIED_SDK_README.md  adk_openai_integration.py  advanced_viz_demo.py  agent_factory_demo.py  grok_agent_demo.py  ml_leverage_discovery_demo.py  ml_ontology_demo.py  money_making_agents_demo.py  multi_agent_handoff.py  production_integration.py  semantic_graph_workflow_demo.py  test_unified_sdk.py  unified_sdk_integration.py
examples/ontology_ml/: README.md  __init__.py  main.py  manager.py
examples/ontology_ml/agents/: __init__.py  mapper_agent.py  schema_agent.py
examples/ontology_ml/ontology/: shapes.ttl
examples/ontology_ml/tools/: __init__.py  graph_tools.py
outputs/: business_semantic_graph.json
outputs/agent_data/: daily_summary_2025-11-09.json
outputs/agent_data/2025-11-09/: forecast_agent_forecast_agent_revenue_forecast_1762721710.json  forecast_agent_forecast_agent_revenue_forecast_1762721739.json  forecast_agent_forecast_agent_revenue_forecast_1762721831.json  forecast_agent_forecast_agent_revenue_forecast_1762721851.json  forecast_agent_forecast_agent_revenue_forecast_1762721878.json  forecast_agent_forecast_agent_revenue_forecast_1762721919.json
outputs/dashboards/: ontology_dashboard_20251109_145552.html  ontology_dashboard_20251109_145743.html  ontology_dashboard_20251109_145811.html  ontology_dashboard_20251109_145850.html  performance_dashboard_forecast_agent_20251109_145552.html  performance_dashboard_forecast_agent_20251109_145743.html  performance_dashboard_forecast_agent_20251109_145811.html  performance_dashboard_forecast_agent_20251109_145850.html
outputs/workflow_data/: decisions_2025-11-09.jsonl  learning_report_2025-11-09.md  workflow_bakery_forecast_opt.json
scripts/: audit_complexity.py  code_quality_checker.py  create_tree_visualization.py  sync_openai_agents.py  validate_vercel_config.py  verify_installation.py
src/agent_kit/: __init__.py  cli.py  data_collection.py  interactive_dashboard.py  ontology_ml_workflow.py  protocols.py  schemas.py  shared_context.py  task_flow_visualizer.py
src/agent_kit/adapters/: __init__.py  handoff_manager.py  ontology_agent_adapter.py  ontology_guardrail.py  ontology_tool_filter.py  openai_sdk.py
src/agent_kit/agents/: __init__.py  algo_trading_agent.py  base.py  business_agents.py  code_writer_agent.py  grok_agent.py  ontology_agent.py  orchestrator.py  planner_agent.py  prop_betting_agent.py  repository_agent.py
src/agent_kit/backtesting/: __init__.py  backtest_engine.py
src/agent_kit/domains/: __init__.py  betting.yaml  business.yaml  registry.py  trading.yaml
src/agent_kit/evaluation/: __init__.py  evaluators.py  ontology_evaluator.py
src/agent_kit/events/: __init__.py  ontology_event.py  ontology_event_logger.py
src/agent_kit/factories/: __init__.py  agent_factory.py
src/agent_kit/memory/: __init__.py  ontology_memory_service.py
src/agent_kit/monitoring/: circuit_breaker.py
src/agent_kit/ontology/: __init__.py  business_schema.py  loader.py  repository_schema.py
src/agent_kit/ontology_extensions/: __init__.py  ontology_agent.py  ontology_mcp.py  ontology_memory.py
src/agent_kit/optimization/: __init__.py
src/agent_kit/orchestrator/: __init__.py  (+2 more)
tests/integration/: test_business_flow.py  test_leverage_discovery.py  test_ml_workflow.py  test_unified_sdk.py
tests/unit/: test_base_agent.py  test_business_orchestrator.py  test_business_schema.py  test_embedder.py  test_grok_agent.py  test_hyperdim_viz.py  test_index.py  test_ontology_agent.py  test_ontology_loader.py  test_ontology_tools.py  test_orchestrator.py  test_repository_agent.py  test_repository_ontology.py  test_repository_tree.py
(+24 files in other folders)
